--- a/Dopamine/zh-Hans.lproj/Localizable.strings
+++ b/Dopamine/zh-Hans.lproj/Localizable.strings
@@ -219,3 +219,5 @@
 "System_Uptime %lld %lld %lld %lld" = "系统已运行 %lld 天 %lld 时 %lld 分 %lld 秒";
 
 "System_Uptime_Dots" = "系统已运行：载入中…";
+
+"Options_bridgeToXinA" = "桥接心浪 (beta)";
